--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@livechat/accounts-sdk": "^1.3.0",
     "@livechat/design-system": "^0.1.2",
     "axios": "^0.18.0",
+    "material-icons-react": "^1.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "styled-components": "^4.2.0"
   },
   "scripts": {
     "start": "HTTPS=true react-scripts start",
