--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "material-icons-react": "^1.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loader-spinner": "^2.3.0",
     "react-scripts": "2.1.8",
     "styled-components": "^4.2.0"
   },
