--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "dependencies": {
     "@livechat/accounts-sdk": "^1.3.0",
     "@livechat/design-system": "^0.1.2",
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "material-icons-react": "^1.0.4",
+    "material-ui-chip-input": "^1.0.0-beta.15",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loader-spinner": "^2.3.0",
