add Rating section in Progress

--- a/Progress/package.json
+++ b/Progress/package.json
@@ -14,6 +14,7 @@
     "react-loader-spinner": "^2.3.0",
     "react-scripts": "2.1.8",
     "react-tag-input": "^6.4.0",
+    "recharts": "^1.5.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
