--- a/Progress/package.json
+++ b/Progress/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@livechat/accounts-sdk": "1.3.0",
+    "@livechat/agent-app-widget-sdk": "^1.3.0",
     "@livechat/design-system": "0.1.3",
     "@material-ui/core": "3.9.3",
     "axios": "0.18.0",
